# tempo-operators

./: .gitignore  .pre-commit-config.yaml  .wokeignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  itest.sh  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  pull_request_template.md  renovate-config.js  renovate.json
.github/workflows/: _terraform-tests.yaml  integration-tests.yaml  issues.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  tiobe-scan.yaml  update-libs.yaml
coordinator/: .gitignore  .wokeignore  OxygenNotIncluded.dxvk-cache  README.md  charmcraft.yaml  dev-release.sh  pyproject.toml  tox.ini
coordinator/.github/workflows/: pull-request.yaml  quality-gates.yaml  release.yaml  update-libs.yaml
coordinator/lib/charms/blackbox_exporter_k8s/v0/: blackbox_probes.py
coordinator/lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
coordinator/lib/charms/prometheus_k8s/v1/: prometheus_remote_write.py
coordinator/lib/charms/sloth_k8s/v0/: slo.py
coordinator/lib/charms/tempo_coordinator_k8s/v0/: charm_tracing.py  tempo_api.py  tracing.py
coordinator/scripts/: deploy_minio.py  tracegen.py
coordinator/src/: charm.py  nginx_config.py  telemetry_correlation.py  tempo.py  tempo_config.py
coordinator/src/grafana_dashboards/: tempo-operational.json  tempo.json
coordinator/src/prometheus_alert_rules/workers/: alerts.yaml
coordinator/src/sli_templates/: sli.yaml
coordinator/src/tempo_coordinator_k8s.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coordinator/terraform/: README.md  main.tf  outputs.tf  variables.tf
coordinator/tests/catan/: test_clustering.py
coordinator/tests/integration/: conftest.py  helpers.py  test_distributed.py  test_ingress.py  test_integration.py  test_scaling_monolithic.py  test_self_monitoring.py  test_self_tracing.py  test_service_mesh.py  test_smoke.py  test_telemetry_correlation.py  test_tls.py  test_tracing_integration.py
coordinator/tests/integration/tester/: charmcraft.yaml  metadata.yaml  requirements.txt
coordinator/tests/integration/tester-grpc/: charmcraft.yaml  metadata.yaml  requirements.txt
coordinator/tests/integration/tester-grpc/src/: charm.py
coordinator/tests/integration/tester-grpc/src/resources/: webserver.py
coordinator/tests/integration/tester/src/: charm.py
coordinator/tests/interface/: conftest.py  test_tempo_cluster.py
coordinator/tests/scenario/: conftest.py  test_charm.py  test_charm_statuses.py  test_charm_tracing.py  test_config.py  test_datasources.py  test_enabled_receivers.py  test_ingressed_tracing.py  test_nginx.py  test_probes.py  test_tempo_api_implementation.py  test_tempo_api_lib.py  test_tempo_clustered.py  test_tls.py  test_tracing_legacy.py  test_tracing_provider.py  test_tracing_requirer.py
coordinator/tests/unit/: conftest.py  helpers.py  test_charm_statuses.py  test_charm_tracing_compat.py  test_charm_tracing_units.py  test_coherence.py  test_config.py  test_datasources.py  test_ingressed_tracing.py  test_nginx.py  test_smoke.py  test_tempo.py  test_tempo_api_implementation.py  test_tempo_clustered.py  test_tempo_config.py  test_tls.py  test_tracing_requirer.py
coordinator/tests/unit/test_charm/: test_tempo_clustered.py
probes/: cluster-consistency.yaml
scripts/: deploy_minio.py  tracegen.py
src/: charm.py  coordinator.py  nginx.py  nginx_config.py  nginx_prometheus_exporter.py  tempo.py  tempo_cluster.py  tempo_config.py  tempo_coordinator.py
src/grafana_dashboards/: tempo-alertmanager.json  tempo-compactor.json  tempo-config.json  tempo-object-store.json  tempo-operational.json  tempo-overrides.json  tempo-overview.json  tempo-queries.json  tempo-reads.json  tempo-resources.json  tempo-rollout-progress.json  tempo-ruler.json  tempo-tenants.json  tempo-writes.json  tempo.json
src/prometheus_alert_rules/tempo_workers/: alerts.yaml
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/catan/: test_clustering.py
tests/integration/: assertions.py  conftest.py  helpers.py  params.txt  run_test.sh  test_charm.py  test_distributed.py  test_ingress.py  test_ingressed_tls.py  test_integration.py  test_juju_doctor.py  test_negative.py  test_receivers.py  test_scaling_monolithic.py  test_self_monitoring.py  test_self_monitoring_coordinator.py  test_self_monitoring_distributed.py  test_self_monitoring_distributed_tls.py  test_self_monitoring_integration.py  test_self_monitoring_tls.py  test_self_tracing.py  test_self_tracing_integration.py  test_self_tracing_remote.py  test_smoke.py  test_telemetry_correlation.py  test_tls.py  test_tracing_integration.py  test_tracing_integration_mesh.py  test_tracing_mesh.py  test_worker_deploy.py
tests/integration/tester/: charmcraft.yaml
tests/interface/: conftest.py  test_grafana_source.py  test_tracing.py
tests/scenario/: conftest.py  helpers.py  test_charm.py  test_charm_statuses.py  test_charm_tracing.py  test_clustering_consistency.py  test_config.py  test_datasources.py  test_enabled_receivers.py  test_ingressed_tracing.py  test_nginx.py  test_tempo_cluster_interface.py  test_tempo_clustered.py  test_tls.py  test_tracing_legacy.py  test_tracing_provider.py  test_tracing_requirer.py
tests/terraform/: main.tf  test_terraform_module.py  variables.tf  versions.tf
tests/unit/: test_charm.py  test_coherence.py  test_config.py  test_tempo.py
worker/: README.md  charmcraft.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
worker/.github/workflows/: promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml
worker/results/: coverage-scenario.xml  coverage-unit.xml  test-results-scenario.xml  test-results-unit.xml  tox-scenario.json  tox-unit.json
worker/src/: charm.py
worker/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
worker/tests/integration/: conftest.py  helpers.py  test_deploy.py  test_smoke.py
worker/tests/interface/: conftest.py
worker/tests/unit/: .charm_tracing_buffer.raw  conftest.py  test_deploy.py  test_smoke.py  test_status.py
(+9 files in other folders)
